# gitpika

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cursor/rules/: no-commits.mdc
.github/workflows/: ci.yml  release.yml
src/: app.rs  input.rs  main.rs  models.rs
src/git/: commands.rs  diff.rs  log.rs  mod.rs  status.rs
src/ui/: diff_panel.rs  files_panel.rs  graph_panel.rs  layout.rs  mod.rs
